added navigation to header

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             <div class="header__menu">
                 <ul class="header__menu-list list">
                     <li class="list__about-container">
-                        <a class="list__about-linc" href="#">About</a>
+                        <a class="list__about-linc" href="#why_cryptochange">About</a>
                     <li class="list__roadmap-container">
-                        <a class="list__roadmap-linc" href="#">Roadmap</a>
+                        <a class="list__roadmap-linc" href="#roadmap">Roadmap</a>
                     <li class="list__app-container">
-                        <a class="list__app-linc" href="#">App</a>
+                        <a class="list__app-linc" href="#download_application">App</a>
                     <li class="list__team-container">
-                        <a class="list__team-linc" href="#">Team</a>
+                        <a class="list__team-linc" href="#team">Team</a>
                     <li class="list__press-container">
-                        <a class="list__press-linc" href="#">Press</a>
+                        <a class="list__press-linc" href="#press">Press</a>
                     <li class="list__feedback-container">
-                        <a class="list__feedback-linc" href="#">Feedback</a>
+                        <a class="list__feedback-linc" href="#feedback">Feedback</a>
                     <li class="list__news-container">
-                        <a class="list__news-linc" href="#">News</a>
+                        <a class="list__news-linc" href="#news">News</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
 
     <main>
         <!--2 section-->
-        <section class="why_wrapper">
+        <section id="why_cryptochange" class="why_wrapper">
             <div>
                 <!--
                     <span class="#">
@@ -294,7 +294,7 @@
         </section>
         <!--end of 4 section-->
         <!--5 section-->
-        <section class="section">
+        <section id="roadmap" class="section">
             <div class="section__header section-header">
                 <!--
                 <span class="#">
@@ -457,7 +457,7 @@
         <!--6 section-->
         <!--end of section 6-->
         <!--7 section-->
-        <section>
+        <section id="download_application">
             <div>
                 <div>
                     <div>
@@ -615,7 +615,7 @@
         <div id="press" class="press">
             <div class="press__about">
                 <span class="yellow__line"></span>
-                <h2>Media About Cryptochange</h2>
+                <h2 id="press"   >Media About Cryptochange</h2>
             </div>
             <div class="press__slider"></div>
             <ul class="press-items">
@@ -724,7 +724,7 @@
                 <div class="divider__yellow-dash">
                     <h2>—</h2>
                 </div>
-                <h2>Feedback From Our Investors</h2>
+                <h2 id="feedback">Feedback From Our Investors</h2>
                 <div class="box__carrousel-feedback-from-investors">
                     <div class="investor__Kilian-Smith">
                         <div class="investor__Kilian-Smith-photo">
@@ -915,6 +915,7 @@
         </section>
         <!--end of section 9-->
         <!--10 section-->
+        <section id="news"></section>
         <!--end of section 10-->
     </main>
     <footer class="footer">
