added navigation to header fix-1(Duplicate ID)

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         <div id="press" class="press">
             <div class="press__about">
                 <span class="yellow__line"></span>
-                <h2 id="press"   >Media About Cryptochange</h2>
+                <h2>Media About Cryptochange</h2>
             </div>
             <div class="press__slider"></div>
             <ul class="press-items">
