--- a/index.html
+++ b/index.html
@@ -69,32 +69,32 @@
 
     <main>
         <!--2 section-->
-        <section id="why_cryptochange" class="why_wrapper">
+        <section id="why__cryptochange" class="why__wrapper">
             <div>
                 <!--
                     <span class="#">
                     </span> 
                     yellow line before the title 
                 -->
-                <h2 class="why_header">Why cryptochange?</h2>
-                <div class="text_wrapper">
-                    <div class="text_container bolt_font">
+                <h2 class="why__header">Why cryptochange?</h2>
+                <div class="text__wrapper">
+                    <div class="text__container__bolt-font">
                         <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
                         </p>
                     </div>
-                    <div class="text_container">
+                    <div class="text__container">
                         <p>We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users
                             from around the world. We believe that crypto transactions can be really instant!</p>
                     </div>
-                    <div class="text_container">
+                    <div class="text__container">
                         <p>With our new InstSwap technology, we make all transactions twice faster than before! That is,
                             if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of
                             2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
                     </div>
-                    <div class="links__container-arrow">
+                    <div class="links__container__arrow">
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                             </div>
                             <div>
                                 <p>Based on</p>
@@ -103,59 +103,59 @@
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <a href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Crypto to Fiat</p>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Instant Transactions</p>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Free of Custody</p>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>The Best Rates</p>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>All Types of Altcoins</p>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>P2P Payments</p>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <img class="yellow__arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                                 <p>Reliable Service</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="image_wrapper"><img class="image_wrapper-why" src="img/why_cryptochange.png" alt="why_cry">
+                <div class="image__wrapper"><img class="image__wrapper__why" src="img/why_cryptochange.png" alt="why_cry">
                 </div>
-                <div class="paginator_wrapper">
+                <div class="paginator__wrapper">
                     <div><Button id="left_btn"></Button></div>
-                    <div class="block_group">
+                    <div class="block__group">
                         <div>
                             <div>
                                 <img class="anycash" src="img/anycash.svg" alt="anycash" width="100">
