block seven add class

--- a/index.html
+++ b/index.html
@@ -457,28 +457,31 @@
         <!--6 section-->
         <!--end of section 6-->
         <!--7 section-->
-        <section id="download_application">
-            <div>
-                <div>
-                    <div>
-                        <p>Core Features</p>
-                        <p>We believe in decentralized and reliable crypto exchange.</p>
+        <section id="core__features features">
+            <div> 
+                <div class="features__text">
+                    <span class="yellow__line">
+                        <!--yellow line-->
+                    </span>
+                    <div class="features__start">
+                        <p class="features__name">Core Features</p>
+                        <p class="features__believe">We believe in decentralized and reliable crypto exchange.</p>
                     </div>
 
-                    <div>
-                        <p>Want more features?</p>
-                        <p>Contact us to share ideas! →</p>
+                    <div class="features__continue">
+                        <p class="features__question">Want more features?</p>
+                        <p class="features__link"> <a href="#">Contact us to share ideas! →</a></p>
                     </div>
                 </div>
 
-                <div> <!--carousel-->
-                    <div> <!--carousel block one-->
-                        <div>
+                <div class="features__carousel carousel"> <!--carousel-->
+                    <div class="carousel__block"> <!--carousel block one-->
+                        <div class="carousel__gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div>
-                            <p>Zero Fee</p>
-                            <p>Yes, the fee is really zero! In addition, we work with the best trading platforms and
+                        <div class="carousel__information">
+                            <p class="carousel__features">Zero Fee</p>
+                            <p class="carousel__benefit">Yes, the fee is really zero! In addition, we work with the best trading platforms and
                                 offer
                                 the best rate in the market. </p>
                         </div>
@@ -486,26 +489,26 @@
                         <button></button>
                     </div>
 
-                    <div> <!--carousel block two-->
-                        <div>
+                    <div class="carousel__block"> <!--carousel block two-->
+                        <div class="carousel__gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div>
-                            <p>Crypto to Fiat</p>
-                            <p>Thanks to our financial partners, you can use Visa or MasterCard to buy or sell
+                        <div class="carousel__information">
+                            <p class="carousel__features">Crypto to Fiat</p>
+                            <p class="carousel__benefit">Thanks to our financial partners, you can use Visa or MasterCard to buy or sell
                                 cryptocurrencies on the platform.</p>
                         </div>
                         <button></button>
                         <button></button>
                     </div>
 
-                    <div> <!--carousel block three-->
-                        <div>
+                    <div class="carousel__block"> <!--carousel block three-->
+                        <div class="carousel__gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div>
-                            <p>Oracle</p>
-                            <p>We partner with Oracle iService for the implementation of cross-platform data services
+                        <div class="carousel__information">
+                            <p class="carousel__features">Oracle</p>
+                            <p class="carousel__benefit">We partner with Oracle iService for the implementation of cross-platform data services
                                 within
                                 blockchain and off-chain.</p>
                         </div>
@@ -513,13 +516,13 @@
                         <button></button>
                     </div>
 
-                    <div> <!--carousel block four-->
-                        <div>
+                    <div class="carousel__block"> <!--carousel block four-->
+                        <div class="carousel__gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div>
-                            <p>NTF</p>
-                            <p>Cryptochange now supports the new trendy technology of NFT to achieve the digitization of
+                        <div class="carousel__information">
+                            <p class="carousel__features">NTF</p>
+                            <p class="carousel__benefit">Cryptochange now supports the new trendy technology of NFT to achieve the digitization of
                                 any
                                 analog assets on blockchain. </p>
                         </div>
@@ -527,6 +530,42 @@
                         <button></button>
                     </div>
                 </div>
+
+                <div class="demo__application application">
+                    <div class="application__text">
+                        <span class="yellow__line">
+                            <!--yellow line-->
+                        </span>
+                        <span>
+                            <h2 class="application__call"> Download  Our Demo Application</h2>
+                        </span>
+                        <p class="application__action">Try all the available features for free and exchange cryptocurrency with ease.</p>
+                        <div class="application__advantage advantage">
+                            <ul>
+                                <li>
+                                    <div>
+
+                                    </div>
+                                    <div>
+
+                                    </div>
+                                </li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+
+
+
+
+                    </div>
+
+                    <div class="application__view">
+
+                    </div>
+                </div>
+    
+
             </div>
         </section>
         <!--end of section 7-->
