added navigation to header fix-2(name fix)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="header__menu">
                 <ul class="header__menu-list list">
                     <li class="list__about-container">
-                        <a class="list__about-linc" href="#why_cryptochange">About</a>
+                        <a class="list__about-linc" href="#why__cryptochange">About</a>
                     <li class="list__roadmap-container">
                         <a class="list__roadmap-linc" href="#roadmap">Roadmap</a>
                     <li class="list__app-container">
