block seven add class

--- a/index.html
+++ b/index.html
@@ -543,10 +543,10 @@
                         <div class="application__advantage advantage">
                             <ul>
                                 <li>
-                                    <div>
+                                    <div class="advantage__icon">
 
                                     </div>
-                                    <div>
+                                    <div class="advantage__text">
 
                                     </div>
                                 </li>
