block seven add icon

--- a/index.html
+++ b/index.html
@@ -544,15 +544,52 @@
                             <ul>
                                 <li>
                                     <div class="advantage__icon">
-
+                                        <img src="img/icon_wallet.svg" width="40" alt="icon wallet">
                                     </div>
                                     <div class="advantage__text">
-
+                                        <div>
+                                            <p>Manage Your Wallet</p>
+                                        </div>
+                                        <div>
+                                            <p>See all your transactions in one place.</p>
+                                        </div>
                                     </div>
                                 </li>
-                                <li></li>
-                                <li></li>
+                                <li>
+                                    <div class="advantage__icon">
+                                        <img src="img/icon_watch.svg" width="40" alt="icon watch">
+                                    </div>
+                                    <div class="advantage__text">
+                                        <div>
+                                            <p>Get Instant Notifications</p>
+                                        </div>
+                                        <div>
+                                            <p>Be the first to know about the rate changes.</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="advantage__icon">
+                                        <img src="img/icon_bitcoin.svg" width="40" alt="icon bitcoin">
+                                    </div>
+                                    <div class="advantage__text">
+                                        <div>
+                                            <p>Get Instant Notifications</p>
+                                        </div>
+                                        <div>
+                                            <p>Be the first to know about the rate changes.</p>
+                                        </div>
+                                    </div>
+                                </li>
                             </ul>
+                            <div class="advantage__label">
+                                <div class="advantage__appstore">
+                                    <img src="img/app_store.svg" alt="label app store">
+                                </div>
+                                <div class="advantage__googleplay">
+                                    <img src="img/google_play.svg" alt="label google play">
+                                </div>
+                            </div>
                         </div>
 
 
