block7 add markup and name classes

--- a/index.html
+++ b/index.html
@@ -547,10 +547,10 @@
                                         <img src="img/icon_wallet.svg" width="40" alt="icon wallet">
                                     </div>
                                     <div class="advantage__text">
-                                        <div>
+                                        <div class="advantage__name">
                                             <p>Manage Your Wallet</p>
                                         </div>
-                                        <div>
+                                        <div class="advantage__description">
                                             <p>See all your transactions in one place.</p>
                                         </div>
                                     </div>
@@ -560,10 +560,10 @@
                                         <img src="img/icon_watch.svg" width="40" alt="icon watch">
                                     </div>
                                     <div class="advantage__text">
-                                        <div>
+                                        <div class="advantage__name">
                                             <p>Get Instant Notifications</p>
                                         </div>
-                                        <div>
+                                        <div class="advantage__description">
                                             <p>Be the first to know about the rate changes.</p>
                                         </div>
                                     </div>
@@ -573,36 +573,42 @@
                                         <img src="img/icon_bitcoin.svg" width="40" alt="icon bitcoin">
                                     </div>
                                     <div class="advantage__text">
-                                        <div>
+                                        <div class="advantage__name">
                                             <p>Get Instant Notifications</p>
                                         </div>
-                                        <div>
+                                        <div class="advantage__description">
                                             <p>Be the first to know about the rate changes.</p>
                                         </div>
                                     </div>
                                 </li>
                             </ul>
-                            <div class="advantage__label">
-                                <div class="advantage__appstore">
+                            <div class="advantage__label label">
+                                <div class="label__appstore">
                                     <img src="img/app_store.svg" alt="label app store">
                                 </div>
-                                <div class="advantage__googleplay">
+                                <div class="label__googleplay">
                                     <img src="img/google_play.svg" alt="label google play">
                                 </div>
                             </div>
                         </div>
-
-
-
-
                     </div>
 
                     <div class="application__view">
-
+                        <div class="application__background">
+                            <img src="img/background_phone.webp" alt="background phone">
+                            <div class="application__phone">
+                                <img src="img/phone_screen.png" alt="phone screen">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="banner__download">
+                        <h2 class="banner__call">Download Whitepaper</h2>
+                        <p class="banner__description">Learn more about our project and cryptonomics.<a href="#">Download Now ↓</a></p>
                     </div>
                 </div>
     
-
             </div>
         </section>
         <!--end of section 7-->
