block7 add markup and name classes

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="banner__background">
                     <div class="banner__download">
                         <h2 class="banner__call">Download Whitepaper</h2>
                         <p class="banner__description">Learn more about our project and cryptonomics.<a href="#">Download Now ↓</a></p>
