--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
 
                 <div class="features__carousel carousel"> <!--carousel-->
                     <div class="carousel__block"> <!--carousel block one-->
+                        <img src="img/background_carousel.svg" alt="background carousel">
                         <div class="carousel__gradient">
                             <!-- полоса градіента -->
                         </div>
