--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     <p>ICOTOP</p>
                 </li>
                 <li>
-                    <img class="press__icon" src="img/deCenter.svg" alt="DeCenter">
+                    <img class="press__icon" src="img/de_center.svg" alt="DeCenter">
                     <p>DeCenter</p>
                 </li>
                 <li>
