--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Cryptochange</title>
     <link rel="shortcut icon" href="img/cryptochange-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/logo.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body>
