section 7 fix(class name)

--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@
         <!--6 section-->
         <!--end of section 6-->
         <!--7 section-->
-        <section id="core__features features">
-            <div> 
+        <section id="download_application" class="core__features features">
                 <div class="features__text">
                     <span class="yellow__line">
                         <!--yellow line-->
@@ -440,61 +439,61 @@
                     </div>
                 </div>
 
-                <div class="features__carousel carousel"> <!--carousel-->
-                    <div class="carousel__block"> <!--carousel block one-->
-                        <img src="img/background_carousel.svg" alt="background carousel">
-                        <div class="carousel__gradient">
+                <div class="features__carousel"> <!--carousel-->
+                    <div class="features__carousel-block"> <!--carousel block one-->
+                        <img src="img/background_carousel.svg" alt="background carousel">  <!-- add class -->
+                        <div class="features__carousel-gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div class="carousel__information">
-                            <p class="carousel__features">Zero Fee</p>
-                            <p class="carousel__benefit">Yes, the fee is really zero! In addition, we work with the best trading platforms and
+                        <div class="features__carousel-information">
+                            <p class="features__carousel-features">Zero Fee</p>
+                            <p class="features__carousel-benefit">Yes, the fee is really zero! In addition, we work with the best trading platforms and
                                 offer
                                 the best rate in the market. </p>
-                        </div>
-                        <button></button>
-                        <button></button>
+                        </div><!-- add class -->
+                        <button></button><!-- add class -->
+                        <button></button><!-- add class -->
                     </div>
 
-                    <div class="carousel__block"> <!--carousel block two-->
-                        <div class="carousel__gradient">
+                    <div class="features__carousel-block"> <!--carousel block two-->
+                        <div class="features__carousel-gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div class="carousel__information">
-                            <p class="carousel__features">Crypto to Fiat</p>
-                            <p class="carousel__benefit">Thanks to our financial partners, you can use Visa or MasterCard to buy or sell
+                        <div class="features__carousel-information">
+                            <p class="features__carousel-features">Crypto to Fiat</p>
+                            <p class="features__carousel-benefit">Thanks to our financial partners, you can use Visa or MasterCard to buy or sell
                                 cryptocurrencies on the platform.</p>
-                        </div>
-                        <button></button>
-                        <button></button>
+                        </div><!-- add class -->
+                        <button></button><!-- add class -->
+                        <button></button><!-- add class -->
                     </div>
 
-                    <div class="carousel__block"> <!--carousel block three-->
-                        <div class="carousel__gradient">
+                    <div class="features__carousel-block"> <!--carousel block three-->
+                        <div class="features__carousel-gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div class="carousel__information">
-                            <p class="carousel__features">Oracle</p>
-                            <p class="carousel__benefit">We partner with Oracle iService for the implementation of cross-platform data services
+                        <div class="features__carousel-information">
+                            <p class="features__carousel-features">Oracle</p>
+                            <p class="features__carousel-benefit">We partner with Oracle iService for the implementation of cross-platform data services
                                 within
                                 blockchain and off-chain.</p>
-                        </div>
-                        <button></button>
-                        <button></button>
+                        </div><!-- add class -->
+                        <button></button><!-- add class -->
+                        <button></button><!-- add class -->
                     </div>
 
-                    <div class="carousel__block"> <!--carousel block four-->
-                        <div class="carousel__gradient">
+                    <div class="features__carousel-block"> <!--carousel block four-->
+                        <div class="features__carousel-gradient">
                             <!-- полоса градіента -->
                         </div>
-                        <div class="carousel__information">
-                            <p class="carousel__features">NTF</p>
-                            <p class="carousel__benefit">Cryptochange now supports the new trendy technology of NFT to achieve the digitization of
+                        <div class="features__carousel-information">
+                            <p class="features__carousel-features">NTF</p>
+                            <p class="features__carousel-benefit">Cryptochange now supports the new trendy technology of NFT to achieve the digitization of
                                 any
                                 analog assets on blockchain. </p>
-                        </div>
-                        <button></button>
-                        <button></button>
+                        </div><!-- add class -->
+                        <button></button><!-- add class -->
+                        <button></button><!-- add class -->
                     </div>
                 </div>
 
@@ -575,8 +574,6 @@
                         <p class="banner__description">Learn more about our project and cryptonomics.<a href="#">Download Now ↓</a></p>
                     </div>
                 </div>
-    
-            </div>
         </section>
         <!--end of section 7-->
         <!--8 section-->
