section 7 fix-2(class name)

--- a/index.html
+++ b/index.html
@@ -501,14 +501,14 @@
                     <div class="application__text">
                         <span class="yellow__line">
                             <!--yellow line-->
-                        </span>
-                        <span>
+                        </span><!-- add class -->
+                        <div><!-- add class -->
                             <h2 class="application__call"> Download  Our Demo Application</h2>
-                        </span>
+                        </div><!-- add class -->
                         <p class="application__action">Try all the available features for free and exchange cryptocurrency with ease.</p>
                         <div class="application__advantage advantage">
-                            <ul>
-                                <li>
+                            <ul><!-- add class -->
+                                <li><!-- add class -->
                                     <div class="advantage__icon">
                                         <img src="img/icon_wallet.svg" width="40" alt="icon wallet">
                                     </div>
