section 8 add nav

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         </section>
         <!--end of section 7-->
         <!--8 section-->
-        <div id="team" class="team">
+        <section id="team" class="team">
             <div class="team__experienced">
                 <span class="yellow__line"></span>
                 <h2>Experienced Team</h2>
@@ -708,9 +708,9 @@
             </ul>
             <p>* Do you want to become our partner? Click on the button and contact us in any convenient way for you.
             </p>
-            <a href="#">Contact Us</a>
-            <a href="#">Learn More<!--white arrow--></a>
-        </div>
+            <a href="#footer">Contact Us</a>
+            <a href="#why__cryptochange">Learn More<!--white arrow--></a>
+        </section>
         <!--end of section 8-->
         <!--9 section-->
         <section class="section__question-need-cryptochange">
@@ -964,7 +964,7 @@
         <section id="news"></section>
         <!--end of section 10-->
     </main>
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="footer__company-info">
             <a href="#" class="footer__company-info-logo">
                 <img src="img/cryptochange-logo.svg" width="190" alt="cryptochange-logo">
