section 8 fix-1(error: End tag section seen, but there were open elements.)

--- a/index.html
+++ b/index.html
@@ -577,7 +577,8 @@
         </section>
         <!--end of section 7-->
         <!--8 section-->
-        <section id="team" class="team">
+    <section id="team" class="team">
+        <div>
             <div class="team__experienced">
                 <span class="yellow__line"></span>
                 <h2>Experienced Team</h2>
@@ -710,7 +711,7 @@
             </p>
             <a href="#footer">Contact Us</a>
             <a href="#why__cryptochange">Learn More<!--white arrow--></a>
-        </section>
+    </section>
         <!--end of section 8-->
         <!--9 section-->
         <section class="section__question-need-cryptochange">
