section 8 modified the list

--- a/index.html
+++ b/index.html
@@ -584,9 +584,15 @@
         <h2>Experienced Team</h2>
         <ul class="team__item">
             <li>
-                <img class="team__icon" src="img/adam_smith.png" alt="Adam Smith">
-                <p class="team__item-title">Adam Smith</p>
-                <p class="team__item-job-title">Chief Executive Officer</p>
+                <div>
+                    <div>
+                        <img class="team__icon" src="img/adam_smith.png" alt="Adam Smith">
+                    </div>
+                    <div>
+                        <p class="team__item-title">Adam Smith</p>
+                        <p class="team__item-job-title">Chief Executive Officer</p>
+                    </div>
+                </div>
             </li>
             <li>
                 <img class="team__icon" src="img/amanda_williams.png" alt="Amanda Williams">
