--- a/index.html
+++ b/index.html
@@ -13,24 +13,15 @@
 </head>
 
 <body>
-
-    <!--Oleg Pilipiei-->
-    <!--Olexandr Bahno-->
-    <!--Olexii Luhovyi-->
-    <!--Oleksandr Makushniak-->
-    <!--Oleksandr Mygal-->
-    <!--Oleksii Skirko-->
-    <!--Blahyy Oleksandr-->
-    <!--Volodymyr Nazarovets-->
     <header class="header">
         <div class="header__contacts">
             <div class="header__contacts-support support">
                 <p class="support__text">Support us on:</p>
-                <a class="support__linc" href="#"> ICO listings</a>
+                <a class="support__link" href="#"> ICO listings</a>
             </div>
             <div class="header__contacts-write write">
                 <p class="write__text">Write us :</p>
-                <a class="write__linc" href="mailto:cryptochange@email.com">cryptochange@email.com</a>
+                <a class="write__link" href="mailto:cryptochange@email.com">cryptochange@email.com</a>
             </div>
         </div>
         <div class="header__line">
@@ -43,19 +34,19 @@
             <div class="header__menu">
                 <ul class="header__menu-list list">
                     <li class="list__about-container">
-                        <a class="list__about-linc" href="#why__cryptochange">About</a>
+                        <a class="list__about-link" href="#why__cryptochange">About</a>
                     <li class="list__roadmap-container">
-                        <a class="list__roadmap-linc" href="#roadmap">Roadmap</a>
+                        <a class="list__roadmap-link" href="#roadmap">Roadmap</a>
                     <li class="list__app-container">
-                        <a class="list__app-linc" href="#download_application">App</a>
+                        <a class="list__app-link" href="#download_application">App</a>
                     <li class="list__team-container">
-                        <a class="list__team-linc" href="#team">Team</a>
+                        <a class="list__team-link" href="#team">Team</a>
                     <li class="list__press-container">
-                        <a class="list__press-linc" href="#press">Press</a>
+                        <a class="list__press-link" href="#press">Press</a>
                     <li class="list__feedback-container">
-                        <a class="list__feedback-linc" href="#feedback">Feedback</a>
+                        <a class="list__feedback-link" href="#feedback">Feedback</a>
                     <li class="list__news-container">
-                        <a class="list__news-linc" href="#news">News</a>
+                        <a class="list__news-link" href="#news">News</a>
                     </li>
                 </ul>
             </div>
@@ -1026,27 +1017,4 @@
         </div>
     </footer>
 </body>
-<!-- Коментар до блоку 3.
-1. Блок повинен знаходитися у тезі main
-2. yellow line before the title не міститьт власного класу з власною назвою. Клас варто реалізувувати через div
-3. 77 лінія містить не коректну назву класу, тег h2 знаходиться у середені контенеру sections з class="ico-progress".
- Тому саме ico-progress ми будемо вважати кореневим класом. Щоб не порушувати тапологію BEM змінимо назву класу на ico_rogress. 
- Відповідно до цих змін назва класу h2 у рядку 77 міє виглядати так =>
-            <div class="ico_progress__title-container">
-                <div class="ico_progress__title">
-                    <p class="ico_progress__title-line">—</p>
-                    <h2 class="ico_progress__title-text">ICO Progress</h2>
-                </div>
-            </div>
-4. Аналогічні помилки зберігаються протягом усьго файлу. У назві єлементів немає закріплення до кореневого класу
-5. у рядку з 80-86 (та у подібних до цієї кострукціях) текст просто висить у контенері без бульякого відповідного тегу. Це завадить нормальній роботі CSS
-6. 114 рядок тег <a> не має власного div
-7. 119 рядок. Стиль прописаний у зображенні
- -->
-<!--Коментар до блоку 5.
-пункти 1-3 аналогічні 
-4. 140-141 рядок та аналогічні до нього. Аналогічна помилка з 5 пуку розбіру section №3
-5. 155-157 рядок та аналогічні до нього. Відсутній клас. Та зсилаючись на макет. Повністю відсутня структура Об'єкта.
- Там повинно бути багато контейнерів div які у майбутньому будуть змінюватися за допомогою CSS
--->
 </html>
