Added classes to img tag

--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
     <footer id="footer" class="footer">
         <div class="footer__company-info">
             <a href="#" class="footer__company-info-logo">
-                <img src="img/cryptochange-logo.svg" width="190" alt="cryptochange-logo">
+                <img src="img/cryptochange-logo.svg" width="190" alt="cryptochange-logo" class="footer__company-info-logo">
             </a>
             <p class="footer__company-info-description">
                 We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users from
@@ -979,19 +979,19 @@
             <a href="#" class="footer__follow-us-want-to-know-more">Want to know more? →</a>
             <div class="footer__company-info-icons">
                 <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/facebook-icon.svg" alt="facebook-icon" width="33">
+                    <img src="img/facebook-icon.svg" alt="facebook-icon" width="33" class="footer__company-info-icons-facebook-icon">
                 </a>
                 <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/instagram-icon.svg" alt="instagram-icon" width="33">
+                    <img src="img/instagram-icon.svg" alt="instagram-icon" width="33" class="footer__company-info-icons-instagram-icon">
                 </a>
                 <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/twitter-icon.svg" alt="twitter-icon" width="33">
+                    <img src="img/twitter-icon.svg" alt="twitter-icon" width="33" class="footer__company-info-icons-twitter-icon">
                 </a>
                 <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/youtube-icon.svg" alt="youtube-icon" width="33">
+                    <img src="img/youtube-icon.svg" alt="youtube-icon" width="33" class="footer__company-info-icons-youtube-icon">
                 </a>
                 <a href="#" class="footer__company-info-icons-item">
-                    <img src="img/email-icon.svg" alt="email-icon" width="33">
+                    <img src="img/email-icon.svg" alt="email-icon" width="33" class="footer__company-info-icons-email-icon">
                 </a>
             </div>
         </div>
